1998-06-11  Mario Weilguni   <mweilguni@kde.org> (KMail-0.6.9)
	
	* "P" and "N" (next and previous mail) will cause the header
	list to be scrolled if the new item is not visible

	* fixed some code to prevent compiler warning

	* panner position is now (again) restored
	
1998-06-07  Stefan Taferner  <taferner@kde.org> (KMail-0.6.8)

	* Message/Headers: Email addresses like <joe@home.org>
	(with the <> around the address) no longer lead to
	an empty field in the message list.

	* Headers: Removed extra space in header line(s).

	* Headers: Empty Subject moved From and Date one column
	left. Fixed (hopefully).

	* Composer: Send again did not decode quoted-printable
	sent messages. Fixed.

	* PGP: KMail did not ask for mantra upon first reading of
	an encrypted message. Applied patch, from Michael Vogel 
	<icarus@hades.pop-celle.de>, which hopefully works :-)

1998-05-13  Stefan Taferner  <taferner@kde.org> (KMail-0.6.7)

	* Filters: Bugfix: when deleting a folder that was the target
	of a filter the next get-mails crashed.

	* Filter Dialog: Deleting filter rules did not work. Fixed.

1998-05-09  Markus Wuebben  <markus@kde.org>

	* kmsettings.cpp (KMAccountSettings):
	Fixed "Delete mail from server". The row was too low.
	* kmmainwin.cpp
	Added a single account mail check option.

1998-04-29  Markus Wuebben  <markus@kde.org>

	* Reader: Fixed the url parsing which made kmail 
	loop.

1998-04-28  Stefan Taferner  <taferner@kde.org> (KMail-0.6.6)

	* Folders: Emptying of the trash folder resulted in an infinite 
	loop. Fixed now.

1998-04-04  Stefan Taferner  <taferner@kde.org> (Kde Beta-4)

	* Filters: Removed warning dialog. Filters are working ok for
	me for several weeks now.

	* Folders: After I finally also deleted lots of important messages
	by mistake I now changed the behaviour of Folder->Empty to
	move the messages into trash instead of deleting them ;-)
	This made the "Are you sure" dialog now obsolete, IMO.
